src/styles/global.scss
@import "./variables.scss";

:root {
  --light: $light;
  --dark: $dark;
  --green: $green;
  --orange: $orange;
  --darkGreen: $darkGreen;
}

* {
  box-sizing: border-box;
}

::selection {
  background-color: $orange;
}

html {
  scroll-behavior: smooth;
  background-color: $green;
}

body {
  font-family: "Questrial", sans-serif;
  -webkit-font-smoothing: antialiased;
  color: $light;
  line-height: 1.5;
  font-weight: 500;
  margin: 0;
  padding: 0;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  margin: 0;
  font-weight: 600;
  line-height: 1.2;
  letter-spacing: 0.05rem;
  font-family: "DM Serif Display", serif;
}

h1 {
  font-size: 2.5rem;
}

p {
  margin: 0;
  font-size: 1.125rem;
}

a {
  color: inherit;
  transition: color 0.2s;
}

a:hover {
  color: $orange;
}

button {
  cursor: pointer;
}

